--- a/app/src/main/res/layout/agregar_estudiante.xml
+++ b/app/src/main/res/layout/agregar_estudiante.xml
@@ -12,7 +12,7 @@
         android:id="@+id/agregar_estudiante_id_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="¿Cuál es el ID del estudiante?"
+        android:text="Enter id student"
         android:textStyle="bold"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -24,7 +24,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:minHeight="48dp"
-        android:hint="ID del estudiante"
+        android:hint="ID"
         android:inputType="number"
         app:layout_constraintTop_toBottomOf="@id/agregar_estudiante_id_text"
         app:layout_constraintStart_toStartOf="parent"
@@ -36,7 +36,7 @@
         android:id="@+id/agregar_estudiante_name_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="¿Cuál es el nombre del estudiante?"
+        android:text="Enter name student"
         android:textStyle="bold"
         app:layout_constraintTop_toBottomOf="@id/agregar_estudiante_id"
         app:layout_constraintStart_toStartOf="parent"
@@ -48,7 +48,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:minHeight="48dp"
-        android:hint="Nombre del estudiante"
+        android:hint="Name"
         android:inputType="text"
         app:layout_constraintTop_toBottomOf="@id/agregar_estudiante_name_text"
         app:layout_constraintStart_toStartOf="parent"
@@ -60,7 +60,7 @@
         android:id="@+id/agregar_estudiante_telNumber_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="¿Cuál es el número de teléfono?"
+        android:text="Enter cellphone number"
         android:textStyle="bold"
         app:layout_constraintTop_toBottomOf="@id/agregar_estudiante_name"
         app:layout_constraintStart_toStartOf="parent"
@@ -72,7 +72,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:minHeight="48dp"
-        android:hint="Número de teléfono"
+        android:hint="Number"
         android:inputType="phone"
         app:layout_constraintTop_toBottomOf="@id/agregar_estudiante_telNumber_text"
         app:layout_constraintStart_toStartOf="parent"
@@ -84,7 +84,7 @@
         android:id="@+id/agregar_estudiante_email_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="¿Cuál es el correo electrónico?"
+        android:text="Enter email"
         android:textStyle="bold"
         app:layout_constraintTop_toBottomOf="@id/agregar_estudiante_telNumber"
         app:layout_constraintStart_toStartOf="parent"
@@ -96,7 +96,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:minHeight="48dp"
-        android:hint="Correo electrónico"
+        android:hint="Email"
         android:inputType="textEmailAddress"
         app:layout_constraintTop_toBottomOf="@id/agregar_estudiante_email_text"
         app:layout_constraintStart_toStartOf="parent"
@@ -108,7 +108,7 @@
         android:id="@+id/agregar_estudiante_bornDate_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="¿Cuál es la fecha de nacimiento?"
+        android:text="Enter date of birth"
         android:textStyle="bold"
         app:layout_constraintTop_toBottomOf="@id/agregar_estudiante_email"
         app:layout_constraintStart_toStartOf="parent"
@@ -120,7 +120,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:minHeight="48dp"
-        android:hint="Fecha de nacimiento (YYYY-MM-DD)"
+        android:hint="(YYYY-MM-DD)"
         android:inputType="date"
         app:layout_constraintTop_toBottomOf="@id/agregar_estudiante_bornDate_text"
         app:layout_constraintStart_toStartOf="parent"
@@ -132,7 +132,7 @@
         android:id="@+id/agregar_estudiante_careerCod_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="¿Cuál es el código de la carrera?"
+        android:text="Enter major code"
         android:textStyle="bold"
         app:layout_constraintTop_toBottomOf="@id/agregar_estudiante_bornDate"
         app:layout_constraintStart_toStartOf="parent"
@@ -144,7 +144,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:minHeight="48dp"
-        android:hint="Código de carrera"
+        android:hint="Code"
         android:inputType="number"
         app:layout_constraintTop_toBottomOf="@id/agregar_estudiante_careerCod_text"
         app:layout_constraintStart_toStartOf="parent"
@@ -156,7 +156,7 @@
         android:id="@+id/btn_guardar_estudiante"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Guardar estudiante"
+        android:text="Save"
         android:backgroundTint="@color/purple_500"
         android:textColor="@android:color/white"
         android:minHeight="48dp"
