--- a/app/src/main/res/layout/agregar_profesor.xml
+++ b/app/src/main/res/layout/agregar_profesor.xml
@@ -12,7 +12,7 @@
         android:id="@+id/agregar_profesor_id_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="¿Cuál es el ID del profesor?"
+        android:text="Enter teacher id"
         android:textStyle="bold"
         android:layout_marginTop="10dp"
         app:layout_constraintTop_toTopOf="parent"
@@ -24,7 +24,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:minHeight="48dp"
-        android:hint="ID del profesor"
+        android:hint="ID"
         android:inputType="number"
         app:layout_constraintTop_toBottomOf="@id/agregar_profesor_id_text"
         app:layout_constraintStart_toStartOf="parent"
@@ -36,7 +36,7 @@
         android:id="@+id/agregar_profesor_name_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="¿Cuál es el nombre del profesor?"
+        android:text="Enter teacher name"
         android:textStyle="bold"
         android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@id/agregar_profesor_id"
@@ -48,7 +48,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:minHeight="48dp"
-        android:hint="Nombre del profesor"
+        android:hint="Name"
         android:inputType="text"
         app:layout_constraintTop_toBottomOf="@id/agregar_profesor_name_text"
         app:layout_constraintStart_toStartOf="parent"
@@ -60,7 +60,7 @@
         android:id="@+id/agregar_profesor_telNumber_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="¿Cuál es el número de teléfono del profesor?"
+        android:text="Enter the teacher phone number"
         android:textStyle="bold"
         android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@id/agregar_profesor_name"
@@ -72,7 +72,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:minHeight="48dp"
-        android:hint="Número de teléfono"
+        android:hint="Number"
         android:inputType="phone"
         app:layout_constraintTop_toBottomOf="@id/agregar_profesor_telNumber_text"
         app:layout_constraintStart_toStartOf="parent"
@@ -84,7 +84,7 @@
         android:id="@+id/agregar_profesor_email_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="¿Cuál es el correo electrónico del profesor?"
+        android:text="Enter teacher email"
         android:textStyle="bold"
         android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@id/agregar_profesor_telNumber"
@@ -96,7 +96,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:minHeight="48dp"
-        android:hint="Correo electrónico"
+        android:hint="Email"
         android:inputType="textEmailAddress"
         app:layout_constraintTop_toBottomOf="@id/agregar_profesor_email_text"
         app:layout_constraintStart_toStartOf="parent"
@@ -108,7 +108,7 @@
         android:id="@+id/btn_guardar_profesor"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Guardar profesor"
+        android:text="Save"
         android:backgroundTint="@color/purple_500"
         android:textColor="@android:color/white"
         android:minHeight="48dp"
