--- a/app/src/main/res/layout/agregar_usuario.xml
+++ b/app/src/main/res/layout/agregar_usuario.xml
@@ -11,7 +11,7 @@
         android:id="@+id/agregar_usuario_id_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="¿Cuál es el ID del usuario?"
+        android:text="Enter user id"
         android:textStyle="bold"
         app:layout_constraintTop_toBottomOf="@id/agregar_estudiante_careerCod"
         app:layout_constraintStart_toStartOf="parent"
@@ -23,7 +23,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:minHeight="48dp"
-        android:hint="ID del usuario"
+        android:hint="ID"
         android:inputType="number"
         app:layout_constraintTop_toBottomOf="@id/agregar_usuario_id_text"
         app:layout_constraintStart_toStartOf="parent"
@@ -35,7 +35,7 @@
         android:id="@+id/agregar_usuario_password_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="¿Cuál es la contraseña del usuario?"
+        android:text="Enter user password"
         android:textStyle="bold"
         app:layout_constraintTop_toBottomOf="@id/agregar_usuario_id"
         app:layout_constraintStart_toStartOf="parent"
@@ -47,7 +47,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:minHeight="48dp"
-        android:hint="Contraseña"
+        android:hint="Password"
         android:inputType="textPassword"
         app:layout_constraintTop_toBottomOf="@id/agregar_usuario_password_text"
         app:layout_constraintStart_toStartOf="parent"
@@ -59,7 +59,7 @@
         android:id="@+id/agregar_usuario_role_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="¿Cuál es el rol del usuario?"
+        android:text="User rol"
         android:textStyle="bold"
         app:layout_constraintTop_toBottomOf="@id/agregar_usuario_password"
         app:layout_constraintStart_toStartOf="parent"
@@ -71,7 +71,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:minHeight="48dp"
-        android:hint="Rol del usuario"
+        android:hint="Rol"
         android:inputType="text"
         app:layout_constraintTop_toBottomOf="@id/agregar_usuario_role_text"
         app:layout_constraintStart_toStartOf="parent"
@@ -83,7 +83,7 @@
         android:id="@+id/btn_guardar_usuario"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Guardar usuario"
+        android:text="Save"
         android:backgroundTint="@color/purple_500"
         android:textColor="@android:color/white"
         android:minHeight="48dp"
