--- a/app/src/main/res/layout/editteacher.xml
+++ b/app/src/main/res/layout/editteacher.xml
@@ -25,7 +25,7 @@
         android:id="@+id/label_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Name"
+        android:text="Enter Name"
         android:textStyle="bold"
         app:layout_constraintTop_toBottomOf="@id/tvTitle"
         app:layout_constraintStart_toStartOf="parent"/>
@@ -34,7 +34,7 @@
         android:id="@+id/edit_name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="Ingrese el nombre"
+        android:hint="Name"
         android:inputType="textPersonName"
         app:layout_constraintTop_toBottomOf="@id/label_name"
         app:layout_constraintStart_toStartOf="parent"
@@ -45,7 +45,7 @@
         android:id="@+id/label_tel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Phone"
+        android:text="Enter Phone"
         android:textStyle="bold"
         app:layout_constraintTop_toBottomOf="@id/edit_name"
         app:layout_constraintStart_toStartOf="parent"
@@ -55,7 +55,7 @@
         android:id="@+id/edit_tel"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="Ingrese el número de teléfono"
+        android:hint="Number"
         android:inputType="phone"
         app:layout_constraintTop_toBottomOf="@id/label_tel"
         app:layout_constraintStart_toStartOf="parent"
@@ -66,7 +66,7 @@
         android:id="@+id/label_email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Email"
+        android:text="Enter Email"
         android:textStyle="bold"
         app:layout_constraintTop_toBottomOf="@id/edit_tel"
         app:layout_constraintStart_toStartOf="parent"
@@ -76,7 +76,7 @@
         android:id="@+id/edit_email"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="Ingrese el correo electrónico"
+        android:hint="Email"
         android:inputType="textEmailAddress"
         app:layout_constraintTop_toBottomOf="@id/label_email"
         app:layout_constraintStart_toStartOf="parent"
@@ -87,7 +87,7 @@
         android:id="@+id/btn_save"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Save Changes"
+        android:text="Save"
         android:backgroundTint="@color/purple_500"
         android:textColor="@android:color/white"
         app:layout_constraintTop_toBottomOf="@id/edit_email"
