--- a/app/src/main/res/layout/profesor.xml
+++ b/app/src/main/res/layout/profesor.xml
@@ -17,7 +17,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="18dp"
             android:layout_marginTop="32dp"
-            android:text="Professor dashboard"
+            android:text="Teacher"
             android:textColor="@color/white"
             android:textSize="32sp"
             android:textStyle="bold"
@@ -43,7 +43,7 @@
             android:id="@+id/search_view"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:queryHint="Busca por nombre"
+            android:queryHint="Search by name"
             android:layout_marginTop="80dp"
             android:layout_marginStart="22dp"
             android:iconifiedByDefault="false"
