--- a/app/src/main/res/layout/student.xml
+++ b/app/src/main/res/layout/student.xml
@@ -15,7 +15,7 @@
             android:id="@+id/textView_menu"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Student dashboard"
+            android:text="Student"
             android:textSize="32sp"
             android:textStyle="bold"
             android:textColor="@color/white"
@@ -44,7 +44,7 @@
             android:id="@+id/search_view"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:queryHint="Busca por nombre"
+            android:queryHint="Search by name"
             android:layout_marginTop="80dp"
             android:layout_marginStart="22dp"
             android:iconifiedByDefault="false"
