--- a/app/src/main/res/layout/admin.xml
+++ b/app/src/main/res/layout/admin.xml
@@ -17,7 +17,7 @@
             android:id="@+id/textViewTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Admin Dashboard"
+            android:text="Admin"
             android:textSize="32sp"
             android:textStyle="bold"
             android:textColor="@color/white"
