--- a/app/src/main/res/layout/agregar_carrera.xml
+++ b/app/src/main/res/layout/agregar_carrera.xml
@@ -11,7 +11,7 @@
         android:id="@+id/agregar_cod_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="¿Cuál es el código de la carrera?"
+        android:text="Enter code of the career"
         android:textStyle="bold"
         android:layout_marginTop="10dp"
         app:layout_constraintTop_toTopOf="parent"
@@ -23,7 +23,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:minHeight="48dp"
-        android:hint="Código de la carrera"
+        android:hint="Code career"
         android:inputType="number"
         app:layout_constraintTop_toBottomOf="@id/agregar_cod_text"
         app:layout_constraintStart_toStartOf="parent"
@@ -35,7 +35,7 @@
         android:id="@+id/agregar_name_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="¿Cómo se llama la carrera?"
+        android:text="Enter name of the career"
         android:textStyle="bold"
         android:layout_marginTop="16dp"
         app:layout_constraintTop_toBottomOf="@id/agregar_cod"
@@ -47,7 +47,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:minHeight="48dp"
-        android:hint="Nombre de la carrera"
+        android:hint="Name career"
         android:layout_marginTop="16dp"
         app:layout_constraintTop_toBottomOf="@id/agregar_name_text"
         app:layout_constraintStart_toStartOf="parent"
@@ -58,7 +58,7 @@
         android:id="@+id/agregar_title_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="¿Cuál es el título?"
+        android:text="Enter title"
         android:textStyle="bold"
         android:layout_marginTop="16dp"
         app:layout_constraintTop_toBottomOf="@id/agregar_name"
@@ -70,7 +70,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:minHeight="48dp"
-        android:hint="Título"
+        android:hint="Title"
         android:layout_marginTop="16dp"
         app:layout_constraintTop_toBottomOf="@id/agregar_title_text"
         app:layout_constraintStart_toStartOf="parent"
@@ -80,8 +80,9 @@
         android:id="@+id/btn_agregar"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Agregar carrera"
-        android:textColor="#303F9F"
+        android:text="Save"
+        android:backgroundTint="@color/purple_500"
+        android:textColor="#FFFFFF"
         android:layout_marginTop="24dp"
         app:layout_constraintTop_toBottomOf="@id/agregar_title"
         app:layout_constraintStart_toStartOf="parent"
