--- a/app/src/main/res/layout/agregar_ciclo.xml
+++ b/app/src/main/res/layout/agregar_ciclo.xml
@@ -11,7 +11,7 @@
         android:id="@+id/agregar_id_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="¿Cuál es el ID del ciclo?"
+        android:text="Enter id of the semester"
         android:textStyle="bold"
         android:layout_marginTop="10dp"
         app:layout_constraintTop_toTopOf="parent"
@@ -23,7 +23,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:minHeight="48dp"
-        android:hint="ID del ciclo"
+        android:hint="Id semester"
         android:inputType="number"
         app:layout_constraintTop_toBottomOf="@id/agregar_id_text"
         app:layout_constraintStart_toStartOf="parent"
@@ -35,7 +35,7 @@
         android:id="@+id/agregar_year_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="¿En qué año?"
+        android:text="Enter year"
         android:textStyle="bold"
         android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@id/agregar_id"
@@ -47,7 +47,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:minHeight="48dp"
-        android:hint="Año"
+        android:hint="Year"
         android:inputType="number"
         app:layout_constraintTop_toBottomOf="@id/agregar_year_text"
         app:layout_constraintStart_toStartOf="parent"
@@ -59,7 +59,7 @@
         android:id="@+id/agregar_number_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="¿Cuál es el número?"
+        android:text="Enter your number"
         android:textStyle="bold"
         android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@id/agregar_year"
@@ -71,7 +71,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:minHeight="48dp"
-        android:hint="Número"
+        android:hint="Number"
         android:inputType="number"
         app:layout_constraintTop_toBottomOf="@id/agregar_number_text"
         app:layout_constraintStart_toStartOf="parent"
@@ -83,7 +83,7 @@
         android:id="@+id/agregar_fecha_inicio_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="¿Cuál es la fecha de inicio?"
+        android:text="Start date"
         android:textStyle="bold"
         android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@id/agregar_number"
@@ -95,7 +95,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:minHeight="48dp"
-        android:hint="Fecha inicio (YYYY-MM-DD)"
+        android:hint="(YYYY-MM-DD)"
         android:inputType="date"
         app:layout_constraintTop_toBottomOf="@id/agregar_fecha_inicio_text"
         app:layout_constraintStart_toStartOf="parent"
@@ -107,7 +107,7 @@
         android:id="@+id/agregar_fecha_fin_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="¿Cuál es la fecha de fin?"
+        android:text="End date"
         android:textStyle="bold"
         android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@id/agregar_fecha_inicio"
@@ -119,7 +119,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:minHeight="48dp"
-        android:hint="Fecha fin (YYYY-MM-DD)"
+        android:hint="(YYYY-MM-DD)"
         android:inputType="date"
         app:layout_constraintTop_toBottomOf="@id/agregar_fecha_fin_text"
         app:layout_constraintStart_toStartOf="parent"
@@ -131,7 +131,7 @@
         android:id="@+id/agregar_activo_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="¿Está activo?"
+        android:text="¿Active?"
         android:textStyle="bold"
         android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@id/agregar_fecha_fin"
@@ -142,7 +142,7 @@
         android:id="@+id/agregar_activo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Activo"
+        android:text="Active"
         app:layout_constraintTop_toBottomOf="@id/agregar_activo_text"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -152,7 +152,7 @@
         android:id="@+id/btn_guardar_ciclo"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Guardar"
+        android:text="Save"
         android:backgroundTint="@color/purple_500"
         android:textColor="@android:color/white"
         android:minHeight="48dp"
