--- a/app/src/main/res/layout/agregar_grupo.xml
+++ b/app/src/main/res/layout/agregar_grupo.xml
@@ -11,7 +11,7 @@
         android:id="@+id/agregar_grupo_id_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="¿Cuál es el ID del grupo?"
+        android:text="Enter group id"
         android:textStyle="bold"
         android:layout_marginTop="10dp"
         app:layout_constraintTop_toTopOf="parent"
@@ -23,7 +23,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:minHeight="48dp"
-        android:hint="ID del grupo"
+        android:hint="ID"
         android:inputType="number"
         app:layout_constraintTop_toBottomOf="@id/agregar_grupo_id_text"
         app:layout_constraintStart_toStartOf="parent"
@@ -35,7 +35,7 @@
         android:id="@+id/agregar_grupo_number_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="¿Cuál es el número del grupo?"
+        android:text="Enter Group number"
         android:textStyle="bold"
         android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@id/agregar_grupo_id"
@@ -47,7 +47,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:minHeight="48dp"
-        android:hint="Número de grupo"
+        android:hint="Number"
         android:inputType="number"
         app:layout_constraintTop_toBottomOf="@id/agregar_grupo_number_text"
         app:layout_constraintStart_toStartOf="parent"
@@ -59,7 +59,7 @@
         android:id="@+id/agregar_grupo_year_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="¿En qué año es el grupo?"
+        android:text="Enter group year"
         android:textStyle="bold"
         android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@id/agregar_grupo_number"
@@ -71,7 +71,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:minHeight="48dp"
-        android:hint="Año del grupo"
+        android:hint="Year"
         android:inputType="number"
         app:layout_constraintTop_toBottomOf="@id/agregar_grupo_year_text"
         app:layout_constraintStart_toStartOf="parent"
@@ -83,7 +83,7 @@
         android:id="@+id/agregar_grupo_horario_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="¿Cuál es el horario del grupo?"
+        android:text="Enter group schedule"
         android:textStyle="bold"
         android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@id/agregar_grupo_year"
@@ -95,7 +95,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:minHeight="48dp"
-        android:hint="Horario del grupo"
+        android:hint="Schedule"
         android:inputType="text"
         app:layout_constraintTop_toBottomOf="@id/agregar_grupo_horario_text"
         app:layout_constraintStart_toStartOf="parent"
@@ -107,7 +107,7 @@
         android:id="@+id/agregar_grupo_courseCod_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="¿Cuál es el código del curso?"
+        android:text="Enter course code"
         android:textStyle="bold"
         android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@id/agregar_grupo_horario"
@@ -119,7 +119,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:minHeight="48dp"
-        android:hint="Código del curso"
+        android:hint="Code"
         android:inputType="number"
         app:layout_constraintTop_toBottomOf="@id/agregar_grupo_courseCod_text"
         app:layout_constraintStart_toStartOf="parent"
@@ -131,7 +131,7 @@
         android:id="@+id/agregar_grupo_teacherId_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="¿Cuál es el ID del maestro?"
+        android:text="Enter teacher id"
         android:textStyle="bold"
         android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@id/agregar_grupo_courseCod"
@@ -143,7 +143,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:minHeight="48dp"
-        android:hint="ID del maestro"
+        android:hint="ID"
         android:inputType="number"
         app:layout_constraintTop_toBottomOf="@id/agregar_grupo_teacherId_text"
         app:layout_constraintStart_toStartOf="parent"
@@ -155,7 +155,7 @@
         android:id="@+id/btn_guardar_grupo"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Guardar grupo"
+        android:text="Save"
         android:backgroundTint="@color/purple_500"
         android:textColor="@android:color/white"
         android:minHeight="48dp"
