--- a/app/src/main/res/layout/career.xml
+++ b/app/src/main/res/layout/career.xml
@@ -15,7 +15,7 @@
             android:id="@+id/textView_menu"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Career Dashboard"
+            android:text="Career"
             android:textSize="32sp"
             android:textStyle="bold"
             android:textColor="@color/white"
