--- a/app/src/main/res/layout/career_item.xml
+++ b/app/src/main/res/layout/career_item.xml
@@ -19,35 +19,47 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="COD"
-            android:textStyle="bold"
-            android:textColor="@android:color/black" />
+            android:textColor="@android:color/black"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/text_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Nombre"
+            android:text="Name"
+            android:textColor="#303F9F"
             android:textSize="18sp"
-            android:textStyle="bold"
-            android:textColor="#303F9F" />
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/text_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Título"
-            android:textColor="@android:color/darker_gray" />
+            android:text="Title"
+            android:textColor="@color/purple_200" />
     </LinearLayout>
+
+    <ImageButton
+        android:id="@+id/btn_edit"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="25dp"
+        android:layout_marginStart="300dp"
+        android:src="@drawable/ic_edit"
+        android:background="@android:color/transparent"
+        android:contentDescription="Edit career"
+        android:layout_gravity="center_vertical" />
+
 
     <ImageButton
         android:id="@+id/btn_delete"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="2dp"
+        android:layout_marginTop="1dp"
         android:layout_marginStart="300dp"
         android:src="@android:drawable/ic_menu_delete"
         android:background="@android:color/transparent"
-        android:contentDescription="Eliminar carrera"
+        android:contentDescription="Delete career"
         android:layout_gravity="center_vertical" />
 
 </androidx.cardview.widget.CardView>
