--- a/app/src/main/res/layout/ciclo_item.xml
+++ b/app/src/main/res/layout/ciclo_item.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
@@ -17,7 +18,7 @@
             android:id="@+id/text_title"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="Ciclo 1 - 2024"
+            android:text="Semester 1 - 2024"
             android:textSize="18sp"
             android:textStyle="bold"
             android:textColor="#303F9F"
@@ -29,7 +30,7 @@
             android:id="@+id/text_date_range"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="Del 01/01 al 30/06"
+            android:text="01/01 at 30/06"
             android:textColor="@android:color/darker_gray"
             android:textSize="14sp"
             app:layout_constraintTop_toBottomOf="@id/text_title"
@@ -41,21 +42,38 @@
             android:id="@+id/text_status"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Activo"
+            android:text="Active"
             android:textColor="@android:color/holo_green_dark"
             android:textStyle="bold"
             app:layout_constraintTop_toBottomOf="@id/text_date_range"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginTop="8dp" />
 
+
         <ImageButton
             android:id="@+id/btn_delete"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@android:drawable/ic_menu_delete"
+            android:layout_marginTop="36dp"
+            android:layout_marginEnd="8dp"
             android:background="@android:color/transparent"
-            android:contentDescription="Eliminar ciclo"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            android:contentDescription="Delete semester"
+            android:src="@android:drawable/ic_menu_delete"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageButton
+            android:id="@+id/btn_edit"
+            android:layout_width="25dp"
+            android:layout_height="26dp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginTop="68dp"
+            android:layout_marginEnd="12dp"
+            android:background="@android:color/transparent"
+            android:contentDescription="Edit career"
+            android:src="@drawable/ic_edit"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
+
 </androidx.cardview.widget.CardView>
