--- a/app/src/main/res/layout/course.xml
+++ b/app/src/main/res/layout/course.xml
@@ -15,7 +15,7 @@
             android:id="@+id/textView_menu"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Course dashboard"
+            android:text="Course"
             android:textSize="32sp"
             android:textStyle="bold"
             android:textColor="@color/white"
