--- a/app/src/main/res/layout/editcareer.xml
+++ b/app/src/main/res/layout/editcareer.xml
@@ -11,7 +11,7 @@
         android:id="@+id/tvTitulo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Editar Carrera"
+        android:text="Career Edit"
         android:textStyle="bold"
         android:textSize="18sp"
         app:layout_constraintTop_toTopOf="parent"
@@ -33,7 +33,7 @@
         android:id="@+id/edit_cod"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="Código"
+        android:hint="Code"
         android:inputType="number"
         android:enabled="false"
         app:layout_constraintTop_toBottomOf="@id/tvCodigo"
@@ -55,7 +55,7 @@
         android:id="@+id/edit_name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="Nombre de la carrera"
+        android:hint="Name"
         app:layout_constraintTop_toBottomOf="@id/tvNombreCarrera"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
@@ -75,7 +75,7 @@
         android:id="@+id/edit_title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="Título"
+        android:hint="Title"
         app:layout_constraintTop_toBottomOf="@id/tvTituloCarrera"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
@@ -84,9 +84,10 @@
         android:id="@+id/btn_save"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Save Changes"
-        android:textColor="#303F9F"
+        android:text="Save"
+        android:textColor="#FFFFFF"
         android:layout_marginTop="24dp"
+        android:backgroundTint="@color/purple_500"
         app:layout_constraintTop_toBottomOf="@id/edit_title"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
