--- a/app/src/main/res/layout/editciclo.xml
+++ b/app/src/main/res/layout/editciclo.xml
@@ -11,7 +11,7 @@
         android:id="@+id/tvTitulo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Editar Ciclo"
+        android:text="Semester edit"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintTop_toTopOf="parent"
@@ -33,7 +33,7 @@
         android:id="@+id/edit_year"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="Año"
+        android:hint="YYYY"
         android:inputType="number"
         app:layout_constraintTop_toBottomOf="@id/tvYear"
         app:layout_constraintStart_toStartOf="parent"
@@ -54,7 +54,7 @@
         android:id="@+id/edit_number"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="Número"
+        android:hint="ID"
         android:inputType="number"
         app:layout_constraintTop_toBottomOf="@id/tvNumber"
         app:layout_constraintStart_toStartOf="parent"
@@ -65,7 +65,7 @@
         android:id="@+id/tvStartDate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Start date (YYYY-MM-DD)"
+        android:text="Start date"
         android:textStyle="bold"
         android:layout_marginTop="16dp"
         app:layout_constraintTop_toBottomOf="@id/edit_number"
@@ -75,7 +75,7 @@
         android:id="@+id/edit_start_date"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="Fecha inicio"
+        android:hint="(YYYY-MM-DD)"
         android:inputType="date"
         app:layout_constraintTop_toBottomOf="@id/tvStartDate"
         app:layout_constraintStart_toStartOf="parent"
@@ -86,7 +86,7 @@
         android:id="@+id/tvFinishDate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Finish date (YYYY-MM-DD)"
+        android:text="Finish date"
         android:textStyle="bold"
         android:layout_marginTop="16dp"
         app:layout_constraintTop_toBottomOf="@id/edit_start_date"
@@ -96,7 +96,7 @@
         android:id="@+id/edit_finish_date"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="Fecha fin"
+        android:hint="(YYYY-MM-DD)"
         android:inputType="date"
         app:layout_constraintTop_toBottomOf="@id/tvFinishDate"
         app:layout_constraintStart_toStartOf="parent"
@@ -118,7 +118,7 @@
         android:id="@+id/btn_save"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Save Changes"
+        android:text="Save"
         android:layout_marginTop="24dp"
         android:backgroundTint="@color/purple_500"
         android:textColor="@android:color/white"
