--- a/app/src/main/res/layout/edituser.xml
+++ b/app/src/main/res/layout/edituser.xml
@@ -12,7 +12,7 @@
         android:id="@+id/tvTitulo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Edit User"
+        android:text="User Edit"
         android:textStyle="bold"
         android:textSize="18sp"
         app:layout_constraintTop_toTopOf="parent"
@@ -24,7 +24,7 @@
         android:id="@+id/tvPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Password"
+        android:text="Enter Password"
         android:textStyle="bold"
         app:layout_constraintTop_toBottomOf="@id/tvTitulo"
         app:layout_constraintStart_toStartOf="parent"
@@ -32,7 +32,7 @@
 
     <EditText
         android:id="@+id/editTextPassword"
-        android:hint="Contraseña"
+        android:hint="Password"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/tvPassword"
@@ -44,7 +44,7 @@
         android:id="@+id/tvRol"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Role"
+        android:text="Enter Role"
         android:textStyle="bold"
         app:layout_constraintTop_toBottomOf="@id/editTextPassword"
         app:layout_constraintStart_toStartOf="parent"
@@ -67,7 +67,7 @@
 
     <Button
         android:id="@+id/btnGuardarUsuario"
-        android:text="Save Changes"
+        android:text="Save"
         android:backgroundTint="@color/purple_500"
         android:textColor="@android:color/white"
         android:layout_width="0dp"
