--- a/app/src/main/res/layout/enrollemt_item.xml
+++ b/app/src/main/res/layout/enrollemt_item.xml
@@ -18,7 +18,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="18sp"
-            android:text="ID Estudiante"
+            android:text="ID Student"
             android:textStyle="bold"
             android:textColor="#303F9F"
             android:layout_marginBottom="8dp"
@@ -29,7 +29,7 @@
             android:id="@+id/text_group_id"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="ID Grupo"
+            android:text="ID Group"
             android:textStyle="bold"
             android:textColor="@android:color/black"
             android:layout_marginBottom="8dp"
@@ -40,11 +40,24 @@
             android:id="@+id/text_grade"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Nota"
+            android:text="Grade"
             android:textColor="@android:color/darker_gray"
             android:layout_marginBottom="8dp"
             app:layout_constraintTop_toBottomOf="@id/text_group_id"
            app:layout_constraintStart_toStartOf="parent" />
+
+        <ImageButton
+            android:id="@+id/btn_edit"
+            android:layout_width="25dp"
+            android:layout_height="26dp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginTop="36dp"
+            android:layout_marginEnd="4dp"
+            android:background="@android:color/transparent"
+            android:contentDescription="Edit career"
+            android:src="@drawable/ic_edit"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageButton
             android:id="@+id/btn_delete"
