--- a/app/src/main/res/layout/enrrollment.xml
+++ b/app/src/main/res/layout/enrrollment.xml
@@ -15,7 +15,7 @@
             android:id="@+id/textView_menu"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Enrrolment dashboard"
+            android:text="Enrrolment"
             android:textSize="32sp"
             android:textStyle="bold"
             android:textColor="@color/white"
@@ -44,7 +44,7 @@
             android:id="@+id/search_view"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:queryHint="Busca por ID"
+            android:queryHint="Search by ID"
             android:layout_marginTop="80dp"
             android:layout_marginStart="22dp"
             android:iconifiedByDefault="false"
@@ -71,7 +71,7 @@
             android:id="@+id/fabAgregarMatricula"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:contentDescription="Agregar Matricula"
+            android:contentDescription="Add enrollment"
             android:layout_margin="24dp"
             android:clickable="true"
             app:srcCompat="@android:drawable/ic_input_add"
