--- a/app/src/main/res/layout/group.xml
+++ b/app/src/main/res/layout/group.xml
@@ -15,7 +15,7 @@
             android:id="@+id/textView_menu"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Group dashboard"
+            android:text="Group"
             android:textSize="32sp"
             android:textStyle="bold"
             android:textColor="@color/white"
@@ -44,7 +44,7 @@
             android:id="@+id/search_view"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:queryHint="Busca por dia"
+            android:queryHint="Search by day"
             android:layout_marginTop="80dp"
             android:layout_marginStart="22dp"
             android:iconifiedByDefault="false"
@@ -71,7 +71,7 @@
             android:id="@+id/fabAgregarGrupo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:contentDescription="Agregar Grupo"
+            android:contentDescription="Add group"
             android:layout_margin="24dp"
             android:clickable="true"
             app:srcCompat="@android:drawable/ic_input_add"
