--- a/app/src/main/res/layout/loginactivity.xml
+++ b/app/src/main/res/layout/loginactivity.xml
@@ -49,7 +49,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
-            android:text="Login"
+            android:text="Log in"
             android:background="@drawable/rounded_edittext"
             android:textColor="#3B81F1"
             android:padding="14dp"
@@ -59,7 +59,7 @@
             android:id="@+id/register_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Si no tienes cuenta, regístrate"
+            android:text="Log out"
             android:textColor="#3B81F1"
             android:textSize="16sp"
             android:paddingTop="12dp"
