--- a/app/src/main/res/layout/user_item.xml
+++ b/app/src/main/res/layout/user_item.xml
@@ -18,7 +18,7 @@
             android:id="@+id/text_user_id"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="ID Usuario"
+            android:text="ID User"
             android:textSize="18sp"
             android:textStyle="bold"
             android:textColor="#303F9F"
@@ -30,7 +30,7 @@
             android:id="@+id/text_user_password"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Contraseña"
+            android:text="Password"
             android:textColor="@android:color/darker_gray"
             app:layout_constraintTop_toBottomOf="@id/text_user_id"
             app:layout_constraintStart_toStartOf="parent" />
@@ -44,6 +44,19 @@
             android:textColor="@android:color/darker_gray"
             app:layout_constraintTop_toBottomOf="@id/text_user_password"
             app:layout_constraintStart_toStartOf="parent" />
+
+        <ImageButton
+            android:id="@+id/btn_edit"
+            android:layout_width="25dp"
+            android:layout_height="26dp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginTop="40dp"
+            android:layout_marginEnd="4dp"
+            android:background="@android:color/transparent"
+            android:contentDescription="Edit career"
+            android:src="@drawable/ic_edit"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageButton
             android:id="@+id/btn_delete"
